fix issue #3 the accordion has no close / collapse button

--- a/src/_component/experience/experience-mobile.scss
+++ b/src/_component/experience/experience-mobile.scss
@@ -28,8 +28,9 @@
     border-bottom: none;
   }
 
-  .resume-icon-plus {
+  .icon-plus {
     float: right;
+    transform: rotate(45deg);
   }
 }
 
@@ -142,11 +143,11 @@
     display: inherit;
   }
 
-  & > .resume-icon-plus {
+  & > .icon-plus {
     display: none;
   }
 
-  .resume-icon-plus {
+  .icon-plus {
     transform: rotate(45deg);
   }
 }
